--- a/exercicio1/index.html
+++ b/exercicio1/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8">
-    <title>Exercício 1</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Laços I - Ex01</title>
     <script src="script.js"></script>
 </head>
-
 <body>
+    <h1>Laços I</h1>
+    <h2>Exercício 1</h2>
+    <h3>Conway</h3>
+    <p>Lidia Yamamura</p>
 
 </body>
-
 </html>
